WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51173
[GTK] Buttons rendering was broken in
r74129
https://bugs.webkit.org/show_bug.cgi?id=51173
Summary
[GTK] Buttons rendering was broken in r74129
Carlos Garcia Campos
Reported
2010-12-16 02:51:52 PST
- // FIXME: The depressed value should probably apply for other theme parts too. - // It must be used for range thumbs, because otherwise when the thumb is pressed, - // the rendering is incorrect. - if (type == MOZ_GTK_SCALE_THUMB_HORIZONTAL || type == MOZ_GTK_SCALE_THUMB_VERTICAL) - widgetState.depressed = isPressed(renderObject); - else - widgetState.depressed = false; - We still need to set the depressed state for other widget types
Attachments
Patch to fix the problem
(1.22 KB, patch)
2010-12-16 02:53 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2010-12-16 02:53:59 PST
Created
attachment 76747
[details]
Patch to fix the problem
Martin Robinson
Comment 2
2010-12-16 09:20:22 PST
Comment on
attachment 76747
[details]
Patch to fix the problem Thanks!
WebKit Commit Bot
Comment 3
2010-12-16 10:23:53 PST
Comment on
attachment 76747
[details]
Patch to fix the problem Rejecting
attachment 76747
[details]
from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'apply-attachment', '--non-interactive', 76747]" exit_code: 2 Last 500 characters of output: ailed to merge in the changes. Patch failed at 0001 2010-12-16 Yury Semikhatsky <
yurys@chromium.org
> When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at WebKitTools/Scripts/update-webkit line 132. Failed to run "['WebKitTools/Scripts/update-webkit']" exit_code: 2 Full output:
http://queues.webkit.org/results/7101076
WebKit Commit Bot
Comment 4
2010-12-16 11:04:13 PST
The commit-queue encountered the following flaky tests while processing
attachment 76747
[details]
: fast/dom/onerror-img.html
bug 51019
animations/suspend-resume-animation.html
bug 48161
(author:
cmarrin@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2010-12-17 18:37:47 PST
Comment on
attachment 76747
[details]
Patch to fix the problem Clearing flags on attachment: 76747 Committed
r74311
: <
http://trac.webkit.org/changeset/74311
>
WebKit Commit Bot
Comment 6
2010-12-17 18:37:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug