2010-12-17  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Buttons rendering was broken in r74129
        https://bugs.webkit.org/show_bug.cgi?id=51173

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::RenderThemeGtk::paintRenderObject):

Canonical link: https://commits.webkit.org/64653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74311 268f45cc-cd09-0410-ab3c-d52691b4dbfc